Bug 304594 - korganizer ignores systray settings
Summary: korganizer ignores systray settings
Status: RESOLVED FIXED
Alias: None
Product: korgac
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-05 07:34 UTC by Franz Trischberger
Modified: 2013-07-12 20:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Franz Trischberger 2012-08-05 07:34:26 UTC
In the systray-menu, I unchecked "Enable Reminders". In the korganizer-settings I unchecked "Show reminder daemon in the systray".
But korganizer still starts the reminder daemon and puts its systrayicon into the systray.
Comment 1 Allen Winter 2012-08-09 16:38:18 UTC
strange.  Unchecking "Show reminder daemon in the systray" works for me

the reminder daemon always runs.  but it should not be showing up in the systray if you uncheck that box.

Do you see ShowReminderDaemon=false  in  $KDEHOME/share/config/korganizerrc ?
Comment 2 Franz Trischberger 2012-08-09 16:52:53 UTC
[System Tray]
ShowReminderDaemon=false

I now disabled korganizer and calendar in kontact. Removed everything related to calendar or korganizer in the kontact overview. restarted kontact - and the systray icon comes up.

Could there be some other process, that wants to have this systray icon running, besides korganizer?
Comment 3 Colin J Thomson 2012-09-22 11:17:43 UTC
I am also seeing this in Fedora 17 -  4.9.1 qt-4.8.2-6 Checking my korganizerrc it has ShowReminderDaemon=false
Comment 4 Allen Winter 2012-09-23 17:36:11 UTC
Looking in the source code, I specifically see that the dock window is not show if ShowReminderDaemon is false in korganizerrc.

However, that code is not reached if korgac is built with the KORGAC_AKONADI_AGENT compile-time variable set.

So can you find out if your distros build korgac with KORGAC_AKONADI_AGENT set?

Otherwise I'm at a loss to explain this behavior.
Comment 5 Allen Winter 2012-09-23 17:47:59 UTC
nevermind.  Think I found the problem and committing a fix.
Comment 6 Allen Winter 2012-09-23 17:58:03 UTC
Git commit 17625fe86480d6ef12f67fb141daef29b11ca2ec by Allen Winter.
Committed on 23/09/2012 at 19:56.
Pushed by winterz into branch 'KDE/4.9'.

in show(), also look a the the ShowReminderDaemon setting.

FIXED-IN: 4.9.2

M  +14   -10   korganizer/korgac/koalarmclient.cpp
M  +1    -0    korganizer/korgac/koalarmclient.h

http://commits.kde.org/kdepim/17625fe86480d6ef12f67fb141daef29b11ca2ec
Comment 7 Colin J Thomson 2012-10-02 20:47:03 UTC
Did not seem to fix it for me, I am still seeing this after the update to 4.9.2, qt-4.8.3 on Fedora 17
Comment 8 Frank Roscher 2013-07-12 20:56:20 UTC
Confirmed, the bug still exists.
I'm reopening as a matter of bookkeeping; a fix will be committed in a second.
Comment 9 Frank Roscher 2013-07-12 20:57:06 UTC
Git commit beff74b0fd26b4b6abe41563658ed0de9ea84c00 by Frank Roscher.
Committed on 12/07/2013 at 20:33.
Pushed by froscher into branch 'KDE/4.11'.

korgac: Read "ShowReminderDaemon" setting from correct config group

Before, the daemon would be shown in the tray no matter what the user
had selected in the configuration dialog.
FIXED-IN: 4.11

M  +1    -1    korganizer/korgac/koalarmclient.cpp

http://commits.kde.org/kdepim/beff74b0fd26b4b6abe41563658ed0de9ea84c00