in show(), also look a the the ShowReminderDaemon setting.

FIXED-IN: 4.9.2
BUG: 304594