korgac/koalarmclient.cpp
@@ -68,11 +68,7 @@ KOAlarmClient::KOAlarmClient( QObject *parent )
   kDebug();
 
 #ifndef KORGAC_AKONADI_AGENT
-  KConfig korgConfig( KStandardDirs::locate( "config", "korganizerrc" ) );
-  KConfigGroup generalGroup( &korgConfig, "General" );
-  const bool showDock = generalGroup.readEntry( "ShowReminderDaemon", true );
-
-  if ( showDock ) {
+  if ( dockerEnabled() ) {
     mDocker = new AlarmDockWindow;
     connect( this, SIGNAL(reminderCount(int)), mDocker, SLOT(slotUpdate(int)) );
     connect( mDocker, SIGNAL(quitSignal()), SLOT(slotQuit()) );
@@ -153,6 +149,13 @@ KOAlarmClient::~KOAlarmClient()
 #endif
 }
 
+bool KOAlarmClient::dockerEnabled()
+{
+  KConfig korgConfig( KStandardDirs::locate( "config", "korganizerrc" ) );
+  KConfigGroup generalGroup( &korgConfig, "General" );
+  return generalGroup.readEntry( "ShowReminderDaemon", true );
+}
+
 void KOAlarmClient::checkAlarms()
 {
   KConfigGroup cfg( KGlobal::config(), "General" );
@@ -215,7 +218,7 @@ void KOAlarmClient::createReminder( CalendarSupport::Calendar *calendar,
 #else
   KNotification *notify = new KNotification( "reminder", 0L, KNotification::Persistent );
   notify->setText( incidence->summary() );
-  notify->sendEvent(); 
+  notify->sendEvent();
 #endif
 
 #endif
@@ -304,10 +307,11 @@ void KOAlarmClient::show()
 {
 #ifndef KORGAC_AKONADI_AGENT
   if ( !mDocker ) {
-    mDocker = new AlarmDockWindow;
-
-    connect( this, SIGNAL(reminderCount(int)), mDocker, SLOT(slotUpdate(int)) );
-    connect( mDocker, SIGNAL(quitSignal()), SLOT(slotQuit()) );
+    if ( dockerEnabled() ) {
+      mDocker = new AlarmDockWindow;
+      connect( this, SIGNAL(reminderCount(int)), mDocker, SLOT(slotUpdate(int)) );
+      connect( mDocker, SIGNAL(quitSignal()), SLOT(slotQuit()) );
+    }
 
     if ( mDialog ) {
       connect( mDialog, SIGNAL(reminderCount(int)),
